# Search-engine-in-C-

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  README.md  config.json
Dev log/: 19-06-2026_(16h15m).md  20-06-2026_(19h50m).md  21-06-2026_(00h05m).md  22-06-2026_(17h20m).md  24-06-2026_(11h36m).md  24-06-2026_(17h48m).md  25-06-2026_(16h04m).md  26-06-2026_(12h16m).md  29-06-2026_(13h12m).md  29-06-2026_(14h06m).md  29-06-2026_(14h23m).md
Info/: info.txt
config/: answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resoursces/: file001.txt  file002.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp  tests.cpp
